# rag-extension

./: .dockerignore  .env  .gitignore  .gitmodules  Dockerfile  Jenkinsfile  README.md  build.gradle  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  run.py  settings.gradle  test.html  test_sales_report.py  tmp_before.txt  vite.config.ts
.gitlab/merge_request_template/: backend.md
.gitlab/merge_request_templates/: 🔀 Develop Merge Request.md
app/: __init__.py  config.py  database.py  main.py  models.py  schemas.py  utils.py
app/admin/: models.py  router.py  schemas.py
app/chat/: router.py
app/chunking/: router.py
app/common/: __init__.py  config.py  db.py
app/common/auth/: __init__.py  dependencies.py  jwt_handler.py  middleware.py  models.py
app/common/cache/: service_url_cache.py
app/common/config/: __init__.py  settings.py
app/common/db/: __init__.py  (+2 more)
app/core/: __init__.py  base.py  check_role.py  config.py  custom_chat_history.py  database.py  error_responses.py  memory_manager.py  milvus_client.py  minio_client.py  openapi.py  redis_client.py  retriever.py  settings.py  types.py  utils.py
app/cross_encoder/: router.py
app/data/: router.py
app/domains/: __init__.py
app/embedding/: router.py
app/extract/: router.py
app/generation/: router.py
app/middleware/: __init__.py  metrics_middleware.py
app/models/: __init__.py  collection.py  database.py  file_category.py  runpod.py
app/processors/: __init__.py  base.py  excel_processor.py  factory.py  html_processor.py  pdf_processor.py  ppt_processor.py  txt_processor.py  word_processor.py  yolo_processor.py
app/query_embedding/: router.py
app/rag_setting/: README.md
app/routers/: __init__.py  access_router.py  admin.py  backend_router.py  file_category_router.py  ingest_progress_router.py  ingest_router.py  query_router.py  rag_router.py  router.py  yolo_controller.py
app/schemas/: __init__.py  common.py  file_category.py
app/search/: router.py
app/service/: chunking_metrics_service.py  cross_encoder_metrics_service.py  docs_proxy.py  embedding_metrics_service.py  extract_metrics_service.py  extract_service.py  file_category_service.py  gateway_client.py  generation_metrics_service.py  history_stream_service.py  ingest_progress_client.py  ingest_progress_service.py  minio_client.py  query_embedding_metrics_service.py  query_service.py  runpod_service.py  search_metrics_service.py
app/services/: __init__.py  docs_service.py  embedding_client.py  proxy_service.py
app/src/: __init__.py  base.py  crossEncoder.py  dense.py  docx.py  e5Large.py  fixed.py  marker.py  mclip.py  md.py  ollama.py  openAI.py  openai.py  openpyxl.py  pyMuPDF.py  semantic.py  txt.py
backend-repo/: .dockerignore  .gitattributes  build.gradle
chunking-repo/: README.md  requirements.txt  run.py
chunking-repo/app/: config.py  main.py
cross-encoder-repo/: .gitignore  Jenkinsfile
cross-encoder-repo/app/: main.py
cross-encoder-repo/cross-encoder-repo/: README.md  pyproject.toml
embedding-repo/: Jenkinsfile  README.md  pyproject.toml
embedding-repo/app/: config.py
exec/: ragextension_data.sql  ragextension_structure.sql  포팅_매뉴얼.md
extract-repo/: Jenkinsfile  README.md  run.py
extract-repo/app/: __init__.py
fastapi-gateway/: .gitignore  Jenkinsfile  README.md
fastapi-gateway/app/: __init__.py  main.py
generation-repo/: Jenkinsfile  pyproject.toml
ingest-repo/: .gitignore  Dockerfile  run.py
ingest-repo/app/: __init__.py  config.py  main.py
nginx/: nginx.conf
python-backend-repo/: .dockerignore  .gitignore  Jenkinsfile  pyproject.toml  run.py
python-backend-repo/app/: main.py
query-embedding-repo/: Jenkinsfile  pyproject.toml  run.py
query-embedding-repo/app/: __init__.py
rag-data-marker/: .gitignore  Dockerfile  run.py
rag-data-marker/app/: main.py
rag-data-yolo/: .gitignore  Dockerfile  README.md
rag-embedding-model-runpod/: .gitignore  pyproject.toml
rag-embedding-model-runpod/app/api/routes/: __init__.py  health.py
scripts/: insert_test_data.py
search-repo/: .dockerignore  Jenkinsfile  README.md
search-repo/app/: config.py  main.py
spring-gateway-repo/: .gitignore  build.gradle
src/: App.tsx  main.tsx
src/guards/: RequireAdmin.tsx  RequireAuth.tsx
src/layouts/: AdminLayout.tsx  UserLayout.tsx
src/router/: admin.routes.tsx  user.routes.tsx
(+1001 files in other folders)
