[project]
name = "hebees-extract"
version = "0.0.1"
description = "HEBEES Extract Service"
requires-python = ">=3.11"
dependencies = [
  "aiomysql==0.2.0",
  "annotated-types==0.7.0",
  "anyio==4.11.0",
  "minio==7.2.7",
  "numpy>=1.24.0",
  "opencv-python>=4.8.0",
  "pandas>=2.0.0",
  "camelot-py[cv]>=0.11.0",
  "pdfplumber>=0.10.0",
  "openai>=1.0.0",
  "certifi==2025.10.5",
  "cffi==2.0.0",
  "click==8.3.0",
  "colorama==0.4.6",
  "cryptography==46.0.3",
  "fastapi==0.119.0",
  "greenlet==3.2.4",
  "h11==0.16.0",
  "httpcore==1.0.9",
  "httptools==0.7.1",
  "httpx==0.28.1",
  "idna==3.11",
  "pycparser==2.23",
  "pydantic==2.12.3",
  "pydantic-settings==2.11.0",
  "pydantic_core==2.41.4",
  "pymysql==1.1.2",
  "python-dotenv==1.1.1",
  "python-multipart==0.0.9",
  "loguru==0.7.2",
  "PyMuPDF==1.26.0",
  "pypdfium2>=4.0.0",
  "python-docx==1.2.0",
  "openpyxl==3.1.5",
  "pyyaml==6.0.3",
  "sniffio==1.3.1",
  "sqlalchemy==2.0.44",
  "starlette==0.48.0",
  "typing-inspection==0.4.2",
  "typing_extensions==4.15.0",
  "uvicorn==0.38.0",
  "watchfiles==1.1.1",
  "websockets==15.0.1",
  "redis>=5.0.0",
  "requests>=2.31.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.hatch.build.targets.sdist]
include = [
  "app",
  "run.py",
  "pyproject.toml",
  "Dockerfile",
  "README.md",
]


